2008-03-31  Dan Williams  <dcbw@redhat.com>

	* src/applet-device-wireless.c
		- (activate_device_cb): fix for libnm-glib arguments change

	* src/applet.c
		- (activate_connection_cb): fix for libnm-glib arguments change
		- (make_vpn_failure_message, make_vpn_disconnection_message): new
			functions; do something with VPN errors
		- (vpn_connection_state_changed): show errors on VPN failure
		- (activate_vpn_cb): notify the user on VPN failure
		- (nma_menu_vpn_item_clicked): pass VPN connection name to
			activate_vpn_cb() so it knows what VPN connection failed

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-leap.c
	  src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-simple.c
		- fill stuff in

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-ttls.c
		- (eap_method_ttls_new): fill anonymous username and CA cert

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-leap.c
		- (ws_leap_new): fill leap password and username

	* src/wireless-security/eap-method-tls.c
		- (eap_method_tls_new): fill passwords, identity, and certificates

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/connection-editor/main.c
		- (main): init the crypto system so that NSS and gnutls don't segfault
			when editing EAP-TLS and EAP-TTLS connections

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/ws-wpa-psk.c
		- (ws_wpa_psk_new): fill WPA key

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/wireless-dialog.c
		- (security_combo_init): fix item counting to determine default security
			type

	* src/connection-editor/page-wireless-security.c
		- (ce_page_wireless_security_new): fix item counting to determine
			default security type

2008-03-30  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (nma_menu_deactivate_cb, nma_menu_clear): punt the menu destruction
			to a low-priority idle handler so that any menu item 'activate'